<resources>
    <!-- Название приложения -->
    <string name="app_name">Trainer helper</string>

    <!--Для меню-->
    <string name="training_story">История тренировок</string>
    <string name="training">Тренировка</string>
    <string name="exercises">Упражнения</string>
    <string name="complexes">Комплексы</string>
    <string name="food_additives">Пищевые добавки</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!-- Для фрагмента -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_for_menu_btn">This is menu button</string>

    <!-- Для popupmenu -->
    <string name="menu_edit">Редактировать</string>
    <string name="menu_delete">Удалить</string>

    <string name="add_title">Добавить</string>

    <!-- Для редактирования упражнения -->
    <!-- Название -->
    <string name="exercise_name_header">Название упражнения</string>
    <string name="hint_exercise_name">Введите название</string>
    <!-- Мера -->
    <string name="measure_header">Мера измерения</string>
    <string name="default_value_of_measures">Мера не выбрана</string>
    <!-- Изображение -->
    <string name="picture_header_text">Изображение</string>
    <string name="btn_choose_picture_text">Выберите изображение</string>
    <!-- Ссылка -->
    <string name="link_header_text">Ссылка</string>
    <string name="link_text_hint">Введите ссылку</string>
    <!-- Для таймера отдыха -->
    <string name="header_for_rest_timer">Время отдыха(От 1 до 600 сек.)</string>
    <string name="hint_text_for_rest_timer">По умолчанию(90 сек.)</string>

    <!-- Для редактирования комплекса упражнений -->
    <!-- Название -->
    <string name="complex_name_header">Название комплекса</string>
    <string name="complex_name_hint_text">Введите название комплекса</string>
    <!-- Упражнения -->
    <string name="default_text_of_choose_exercises">Не выбраны</string>

    <!-- Для редактирования пищевых добавок -->
    <!-- Название -->
    <string name="food_additives_header_text">Название пищевой добавки</string>
    <string name="food_additives_name_text_hint">Введите название пищ. добавки</string>

    <!-- Мера -->
    <string name="food_additives_header_measure_text">Мера</string>
    <string name="description_for_spinner_measure_of_additive">
        Список выбора меры измерения пищевой добавки
    </string>

    <!-- Дни приема -->
    <string name="header_day_of_taking_food_additives_text">Дни приема</string>
    <string name="description_for_spinner_day_of_taking_food_additives">
        Выбор дней приема
    </string>

    <!-- Время принятия пищевой добавки -->
    <string name="header_time_to_take_food_additive_text">Время приема и количество дозы</string>

    <!-- item времени -->
    <string name="item_description_for_delete_btn">Кнопка для удаления времени</string>

    <!-- ok menu -->
    <string name="title_ok_menu">Окей</string>

    <!-- Для кнопки инофрмации -->
    <string name="desc_for_info_btn">Кнопка информации</string>

    <!-- Для пищ добавки -->
    <string name="default_text_of_taking_time">Время приема не выбрано</string>

    <string name="add_time_of_taking_food_additive_btn">Добавить время принятия</string>

    <!-- Для списка всех времён приёма -->
    <string name="main_header_time_text">Время</string>
    <string name="main_header_count_text">Колличество</string>

    <!-- Для добавления одного item TimeOfTaking -->
    <string name="taking_count_text">Принимаемая доза</string>
    <string name="hint_taking_count_text">Введите дозу</string>
    <string name="header_taking_time_text">Время принятия дозы</string>
    <string name="default_taking_time_text">Введите время принятия</string>

    <!-- Для alert диалога -->
    <string name="default_alert_dialog_ok">Ок</string>
    <string name="default_alert_dialog_cancle">Отмена</string>

    <!-- Для выбора определенного дня -->
    <string name="header_of_taking_spec_day">День принятия</string>
    <string name="default_value_of_taking_spec_day_text">Не выбран</string>

    <!-- Для выбора дней недели -->
    <string name="header_of_choose_day_of_week">Дни недели</string>
    <string name="default_value_of_choose_day_of_week_text">Дни недели не выбраны</string>

    <!-- Для интервала в днях -->
    <string name="header_interval_in_days">Интервал в днях</string>
    <string name="hint_interval_in_days_text">Введите интервал в днях</string>
    <!-- Упражнения комплексов -->
    <string name="header_for_exercise_observe_complex">Упражнения комлпекса</string>


    <string name="header_of_choose_complex">Существующие комплексы</string>
    <string name="header_name_of_train">Название тренировки</string>
    <string name="hint_name_of_train">Введите название тренировки</string>
    <string name="describe_of_info_complex_btn">Информация о комлексе</string>

    <!-- Описание для кнопок на упражнении -->
    <string name="description_list_of_exercise_btn">Выбор упражнения</string>
    <string name="description_info_of_exercise_btn">Информация об упражнении</string>
    
    
    <string name="value_of_mesure_in_approach_hint">Введите значение</string>
</resources>