<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeOfTakingFoodAdditives">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/headerTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/main_header_time_text"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/countHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/main_header_count_text"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </TableRow>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/TimeOfTakingrecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:background="#BFB5B5"
        app:layout_constraintBottom_toTopOf="@+id/addTimeOfTakingBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

    <Button
        android:id="@+id/addTimeOfTakingBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:onClick="addNewTakingTime"
        android:text="@string/add_time_of_taking_food_additive_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>